see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

08-Jun-2012 Jean-Marie Simonet
 ^ [#28613] Use fewer deprecated methods. Thanks Rouven
 ^ [#28377] Backport JDatabase::execute(). Thanks Rouven.
 # [#28631] Bug in Codemirror plugin. Thanks Viet and Elijah
 # [#28603] User Registration Form: Label/Field Offset by one Line. Thanks Johannes
 # [#28525] Fix JForm::load() not replacing form field in same location. Thanks Aaron

07-Jun-2012 Jean-Marie Simonet
 $ Updating installation ini files: hr-HR, sk-SK
 # [#28526] bug in mod_articles_news. Thanks Elin
 # [#28420] discover_install of components does not trigger custom install method. Thanks Michael
 # [#28192] Bug in mod_articles_news in version 1.7 and 2.5. Thanks Heikki and Ofer.
 ^ [#28570] Backport JAccess::getActionsFrom. Thanks Michael
 ^ [#28549] Provide legacy aliases for the MVC classes. Thanks Rouven
 # [#28400] Help Site URL Defaulting to Version 1.6. Thanks Mark
 
06-Jun-2012 Christophe Demko
 ^ [#28378] Backport JInput:def() from the platform (Rouven Weßling)
 # [#28487] Menu Item Alias does not obey Secure Setting of Aliased Item (Don Gilbert)

05-Jun-2012 Jean-Marie Simonet
 # [#28619] Fix #24510 to not add code specific to the profile plug-in to com_users. Thanks Rouven.
 +# [#28565] Add feature readmore in feed items. Also bugfix for fulltext in feed items. Thanks Jurian
 + [#28469] Add counter to redirect component. Thanks Ronald

04-Jun-2012 Jean-Marie Simonet
 + [#28067] Option to disable the ability to change the Username in Profile
 + [#24510] Implementation of Terms of Service. Thanks Peter.