@@ -43,7 +43,7 @@ COM_USERS_CONFIG_FIELD_NEW_USER_TYPE_DESC="The default group that will be applie
 COM_USERS_CONFIG_FIELD_NEW_USER_TYPE_LABEL="New User Registration Group"
 COM_USERS_CONFIG_FIELD_SUBJECT_PREFIX_DESC="This gets added in front of each mail subject."
 COM_USERS_CONFIG_FIELD_SUBJECT_PREFIX_LABEL="Subject Prefix"
-COM_USERS_CONFIG_FIELD_USERACTIVATION_DESC="If set to None, the user will be registered right away. If set to Self, the User will be emailed a link to activate their account before they can log in. If set to Admin, the user will be emailed a link to verify their email address, then an administrator will be notified to activate the user's account."
+COM_USERS_CONFIG_FIELD_USERACTIVATION_DESC="If set to None, the user will be registered right away. If set to Self, the User will be emailed a link to activate their account before they can log in. If set to Admin, the user will be emailed a link to verify their email address, then all users set to receive system emails will be notified to activate the user's account."
 COM_USERS_CONFIG_FIELD_USERACTIVATION_LABEL="New User Account Activation"
 COM_USERS_CONFIG_FIELD_USERACTIVATION_OPTION_ADMINACTIVATION="Admin"
 COM_USERS_CONFIG_FIELD_USERACTIVATION_OPTION_SELFACTIVATION="Self"
