@@ -16,7 +16,6 @@ defined('JPATH_PLATFORM') or die;
  * @subpackage  Database
  * @since       11.1
  * @deprecated  12.3 Use semantic exceptions instead
- * @deprecated  12.3 Use semantic exceptions instead
  */
 class JDatabaseException extends RuntimeException
 {
